fixed nav bar responsiveness, collapse as it gets smaller

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -11,6 +11,14 @@
   height: 450px;
 }
 
+.navbar {
+  margin-bottom: 0px;
+}
+
+.nav-tabs {
+  border-bottom: 0px;
+}
+
 h1 {
   color: #337494 !IMPORTANT;
   text-align: center;
